--- a/learn/networking/tcp/index.html
+++ b/learn/networking/tcp/index.html
@@ -8,12 +8,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-</head>
+  <!-- Custom -->
+  <link href="styles/custom.css" rel="stylesheet">
+  </head>
 
 <body>
   <div class="container-md">
-    <div class="container-fluid text-center mb-5">
-      <h1>Protocolo TCP</h1>
+    <div class="container-fluid mb-5">
+      <h1 class="text-center">Protocolo TCP</h1>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum dui est, vestibulum sed ante at, ultrices
         dignissim erat. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum fringilla justo vitae
@@ -35,15 +37,15 @@
       </div>
       <div class="col">
         <h2>Cuestionario:</h2>
-        <form id="form">
-          <div id="A" class="mb-3">
-            <label class="form-label">A. Respuesta libre.</label>
+        <form id="form" class="needs-validation" novalidate>
+          <div id="A" class="input-group mb-3">
+            <span class="input-group-text">A</span>
             <input type="text" class="form-control">
             <div class="valid-feedback">Bien!</div>
-            <div class="invalid-feedback">Incorrecto</div>
+            <div class="invalid-feedback">Incorrecto.</div>
           </div>
-          <div id="B" class="mb-3">
-            <label class="form-label">B. Respuesta múltiple (tipo 1).</label>
+          <div id="B" class=" input-group mb-3">
+            <span class="input-group-text">B</span>
             <select class="form-select">
               <option selected></option>
               <option value="1">Opción 1</option>
@@ -51,24 +53,7 @@
               <option value="3">Opción 3</option>
             </select>
             <div class="valid-feedback">Bien!</div>
-            <div class="invalid-feedback">Incorrecto</div>
-          </div>
-          <div id="C" class="mb-3">
-            <label class="form-label">C. Respuesta múltiple (tipo 2).</label>
-            <div class="form-check">
-              <input class="form-check-input" type="radio" name="C" value="1">
-              <label class="form-check-label">Opción 1</label>
-            </div>
-            <div class="form-check">
-              <input class="form-check-input" type="radio" name="C" value="2">
-              <label class="form-check-label">Opción 2</label>
-            </div>
-            <div class="form-check">
-              <input class="form-check-input" type="radio" name="C" value="3">
-              <label class="form-check-label">Opción 3</label>
-            </div>
-            <div class="valid-feedback">Bien!</div>
-            <div class="invalid-feedback">Incorrecto</div>
+            <div class="invalid-feedback">Incorrecto.</div>
           </div>
           <button id="btn-check" type="button" class="btn btn-primary">Comprobar</button>
         </form>
@@ -86,19 +71,27 @@
     integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
   <!-- Custom -->
   <script>
-    $("#btn-check").on("click", () => {
+    $("#btn-check").on("click", (ev) => {
       // Really easy to cheat ;)
+      $("#form").removeClass("was-validated");
       $.each({ "A": "1", "B": "2", "C": "3" }, (ri, r) => {
-        console.log(`Checking ${ri}...`);
-        let value = null;
+        let el = null;
         if ($(`#${ri}`).children("input:text").length != 0)
-          value = $(`#${ri}`).children("input:text")[0].value;
+          el = $(`#${ri}`).children("input:text")[0];
         else if ($(`#${ri}`).children("select").length != 0)
-          value = $(`#${ri}`).children("select").find(":selected")[0].value;
+          el = $(`#${ri}`).children("select")[0];
         else if ($(`#${ri}`).children("input:radio").length != 0)
-          value = $(`#${ri}`).children("input:radio").find(":checked")[0].value;
-        console.log(value);
+          el = $(`#${ri}`).children("input:radio").find(":checked")[0];
+        if (el == null) {
+          console.log(`${ri}: Empty response or unknown type of question.`);
+          return;
+        }
+        el.setCustomValidity("");
+        if (el.value != r)
+          el.setCustomValidity("incorrect");
       });
+      $("#form").addClass("was-validated");
+      ev.stopPropagation();
     });
   </script>
 </body>
